--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "start": "nodemon --exec babel-node init.js --delay 2"
   },
   "devDependencies": {
+    "eslint": "^7.0.0",
     "nodemon": "^2.0.3"
   }
 }
