--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "mongoose": "^5.9.14",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "ngrok": "^3.2.7",
     "node-sass": "^4.14.1",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-github": "^1.1.0",
+    "passport-kakao": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
+    "passport-naver": "^1.0.6",
     "postcss-loader": "^3.0.0",
     "pug": "^2.0.4",
     "sass-loader": "^8.0.2",
@@ -39,7 +42,8 @@
   "scripts": {
     "dev:server": "nodemon --exec babel-node init.js --delay 2",
     "dev:assets": "WEBPACK_ENV=development webpack -w",
-    "build:assets": "WEBPACK_ENV=production webpack"
+    "build:assets": "WEBPACK_ENV=production webpack",
+    "ngrok": "ngrok http 4000"
   },
   "devDependencies": {
     "eslint": "^7.0.0",
