--- a/package.json
+++ b/package.json
@@ -47,5 +47,13 @@
   "devDependencies": {
     "eslint": "^7.0.0",
     "nodemon": "^2.0.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/beefpork/wetube.git"
+  },
+  "bugs": {
+    "url": "https://github.com/beefpork/wetube/issues"
+  },
+  "homepage": "https://github.com/beefpork/wetube#readme"
 }
