--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^5.9.14",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "net": "^1.0.2",
     "ngrok": "^3.2.7",
     "node-sass": "^4.14.1",
     "passport": "^0.4.1",
